[P4ADEV-1928] organization list with dpto count postman test